--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -2,5 +2,6 @@
 <resources>
     <dimen name="general_padding_margin_small">8dp</dimen>
     <dimen name="header">15sp</dimen>
+    <dimen name="item_height">120dp</dimen>
 
 </resources>
