--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,66 +1,60 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="@dimen/item_height"
-    android:orientation="horizontal"
-    android:layout_margin="@dimen/general_padding_margin_small">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/item_height"
+    android:orientation="vertical"
+    android:padding="@dimen/general_padding_margin_small"
+    android:paddingBottom="@dimen/general_padding_margin_small">
 
-    <LinearLayout
-        android:layout_width="0dp"
+    <TextView
+        android:id="@+id/header"
+        style="@style/title_text_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:textAllCaps="true"
+        tools:text="General elections held on Sunday" />
+
+    <TextView
+        style="@style/section_text_style"
+        android:id="@+id/section"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="15sp"
+        tools:text="World news" />
+
+    <TextView
+        android:id="@+id/body"
+        style="@style/body_text_style"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:maxLines="3"
+        android:textSize="15sp"
+        android:layout_marginTop="@dimen/general_padding_margin_tiny"
+        tools:text="Long placeholder location that should wrap to more than 2 lines of text.\nLong placeholder location that should wrap to more than 2 lines of text" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_weight="1"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/header"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:fontFamily="sans-serif-medium"
-            android:maxLines="2"
-            android:textAllCaps="true"
-            android:textSize="@dimen/header"
-            tools:text="General elections held on Sunday" />
-
-        <TextView
-            android:id="@+id/section"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            tools:text="World news"/>
+        android:layout_marginTop="@dimen/general_padding_margin_tiny">
 
         <TextView
             android:id="@+id/author"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="12sp"
-            tools:text="by John Smith"/>
-
-        <TextView
-            android:id="@+id/body"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="3"
-            android:textSize="15sp"
-            tools:text="Long placeholder location that should wrap to more than 2 lines of text.\nLong placeholder location that should wrap to more than 2 lines of text" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:layout_marginLeft="16dp"
-        android:layout_marginStart="16dp"
-        android:orientation="vertical">
+            tools:text="by #John Smith" />
 
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
             android:textSize="12sp"
             tools:text="Mar 6, 2010" />
 
@@ -69,8 +63,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="end"
+            android:layout_marginRight="@dimen/general_padding_margin_small"
+            android:layout_toLeftOf="@id/date"
             android:textSize="12sp"
             tools:text="3:00 PM" />
 
-    </LinearLayout>
+    </RelativeLayout>
 </LinearLayout>
