--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="general_padding_margin_tiny">4dp</dimen>
     <dimen name="general_padding_margin_small">8dp</dimen>
-    <dimen name="header">15sp</dimen>
-    <dimen name="item_height">120dp</dimen>
+    <dimen name="general_padding_margin_medium">16dp</dimen>
+    <dimen name="header">18sp</dimen>
+    <dimen name="body_text">15sp</dimen>
+    <dimen name="item_height">136dp</dimen>
 
 </resources>
